[gd_scene load_steps=6 format=3 uid="uid://c6dhgxet661ke"]

[ext_resource type="Script" path="res://Scenes and Scripts/Game/Laboratory/Objects/vessel.gd" id="1_0kjhs"]
[ext_resource type="Texture2D" uid="uid://bnovic5wao87g" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/water_pitcher.png" id="2_x8ebe"]
[ext_resource type="Texture2D" uid="uid://bn81kycrkcacc" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/water_pitcher_highlight.png" id="3_ih4xh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6wgwi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x8ebe")
}, {
"duration": 1.0,
"texture": ExtResource("3_ih4xh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_nleoc"]
size = Vector3(3.47409, 8.18432, 2.83698)

[node name="Vessel" type="Node3D"]
script = ExtResource("1_0kjhs")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.0280508, 0.815911, 0.043722)
sprite_frames = SubResource("SpriteFrames_6wgwi")

[node name="Mouse_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0280508, -1.18409, 0.30331)

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="Mouse_area"]
polygon = PackedVector2Array(-0.813297, 2.46198, 0.29934, 2.52039, 0.970771, 1.75934, 0.950872, 1.43863, -0.418267, 1.40619, -0.839058, 2.06835)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.123947, -3.59217, 0.143159)
shape = SubResource("BoxShape3D_nleoc")

[connection signal="mouse_entered" from="Mouse_area" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Mouse_area" to="." method="_on_area_3d_mouse_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
